k8s/searxng/resources/valkey.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey-deployment
  labels: &labels
    app.kubernetes.io/component: valkey
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: valkey
          image: docker.io/valkey/valkey:9.0@sha256:4503e204c900a00ad393bec83c8c7c4c76b0529cd629e23b34b52011aefd1d27
          resources:
            limits:
              memory: 1G
          ports:
            - name: valkey
              containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: valkey-service
spec:
  selector:
    app.kubernetes.io/component: valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: valkey
